--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "tech-blog",
   "version": "1.0.0",
-  "description": "",
+  "description": "A tech blog platform",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm server.js",
-    "seed": "node seeds/seed.js"
+    "start": "node server.js",
+    "seed": "node seeds/seed.js",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^7.0.4",
-    "dotenv": "^8.6.0",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
+    "express-handlebars": "^7.0.6",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
