--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_NAME=techblog_db
-DB_USER=root
-DB_PASSWORD=Something12@
-SESSION_SECRET=Something12@
-JAWSDB_URL=mysql://bqjxmtbxqaz1cs45:h7c6lahayto66in5@m7wltxurw8d2n21q.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/y073n83rx63w4clm
+DB_NAME="techblog_db"
+DB_USER="root"
+DB_PASSWORD="Something12@"
+SESSION_SECRET="Something12@"
+JAWSDB_URL= "mysql://bqjxmtbxqaz1cs45:h7c6lahayto66in5@m7wltxurw8d2n21q.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/y073n83rx63w4clm"
