--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "seed": "node seeds/seed.js",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "webpack --config webpack.config.js"
   },
   "engines": {
     "node": "20.13.1",
@@ -26,12 +27,18 @@
     "express-handlebars": "^7.0.6",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "babel-loader": "^9.1.3",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "nodemon": "^3.0.2",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
